--- a/index.html
+++ b/index.html
@@ -33,56 +33,56 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I’m Cindy(Siyu) Hou<br /></h1>
-											<p class="large-text-2">An aspiring future supply chain Specialist</p>
+											<p>An aspiring future supply chain Specialist</p>
 										</header>
-										<p class="large-text-1">Hello 你好! My name is Cindy(Siyu), a rising fourth-year Data Science and Supply Chain Management student at Northeastern University. I am passionate about leveraging technology to revolutionize the supply chain industry. My academic research journey and co-op experience have equipped me with robust data processing, analytics, visualization, and project management skills, enabling me to leverage both quantitative and qualitative methods in optimizing supply chain processes.</p>
+										<p>Hello 你好! My name is Cindy(Siyu), a rising fourth-year Data Science and Supply Chain Management student at Northeastern University. I am passionate about leveraging technology to revolutionize the supply chain industry. My academic research journey and co-op experience have equipped me with robust data processing, analytics, visualization, and project management skills, enabling me to leverage both quantitative and qualitative methods in optimizing supply chain processes.</p>
 
-										<p class="large-text-1">I am particularly driven by the potential to advance supply chain process automation and optimization, aiming to make operations not only more efficient but also more eco-friendly. In an era of technological advancements rapidly transforming industries, I am committed to utilizing my diverse skillset to contribute to sustainable supply chain solutions.</p>
+										<p>I am particularly driven by the potential to advance supply chain process automation and optimization, aiming to make operations not only more efficient but also more eco-friendly. In an era of technological advancements rapidly transforming industries, I am committed to utilizing my diverse skillset to contribute to sustainable supply chain solutions.</p>
 											
-										<p class="large-text-1">My goal is to integrate data-driven insights with innovative technology solutions to create a more agile supply chain design and planning. I am excited about collaborating with professionals and organizations dedicated to sustainability and technological innovation.</p>
+										<p>My goal is to integrate data-driven insights with innovative technology solutions to create a more agile supply chain design and planning. I am excited about collaborating with professionals and organizations dedicated to sustainability and technological innovation.</p>
 											
-										<p class="large-text-1">Let’s connect and explore how we can work together to make supply chains smarter!</p>
+										<p>Let’s connect and explore how we can work together to make supply chains smarter!</p>
 										<ul class="actions">
 											<li><a href="https://www.linkedin.com/in/siyu-cindy-hou/" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/pic10.jpg" alt="" style="width: 400px; height: auto; margin-top: 120px;" />
 									</span>
 								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2 class="large-text-title">Career Interest Areas</h2>
+										<h2>Career Interest Areas</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3 class="large-text-cia">Business Process Improvement</h3>
-												<p class="large-text-2">Efficiency is key in production. Work smarter outperforms work harder. Continuous learning of innovative skills to improve existing processes benefits the entire organization. My programming, process mapping and critical thinking skills enable me to explore this area.</p>
+												<h3>Business Process Improvement</h3>
+												<p>Efficiency is key in production. Work smarter outperforms work harder. Continuous learning of innovative skills to improve existing processes benefits the entire organization. My programming, process mapping and critical thinking skills enable me to explore this area.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-solid fa-paper-plane"></span>
 											<div class="content">
-												<h3 class="large-text-cia">Technology Solution Management</h3>
-												<p  class="large-text-2">After a DC visit during my co-op, I was intrigued by the significant improvements brought by new technology solutions. However, I also acknowledged that transforming a business practice needs extensive collaboration and communication. My project management knowledge and leadership experiences enhance my competence in this field.</p>
+												<h3>Technology Solution Management</h3>
+												<p>After a DC visit during my co-op, I was intrigued by the significant improvements brought by new technology solutions. However, I also acknowledged that transforming a business practice needs extensive collaboration and communication. My project management knowledge and leadership experiences enhance my competence in this field.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3 class="large-text-cia">Data Analytics, Visualization & Storytelling</h3>
-												<p  class="large-text-2">Harnessing data is essential. Transforming raw data into insights drives business success. My expertise in data empowers me to work like a “detective” to uncover hidden trends and causes, informing business stakeholders to develop actionable plans.</p>
+												<h3>Data Analytics, Visualization & Storytelling</h3>
+												<p>Harnessing data is essential. Transforming raw data into insights drives business success. My expertise in data empowers me to work like a “detective” to uncover hidden trends and causes, informing business stakeholders to develop actionable plans.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3 class="large-text-cia">Optimization, Planning & Simulation</h3>
-												<p  class="large-text-2">Effective planning and optimization facilitate efficient resource allocation and higher profit returns. Through simulation techniques, I can model and analyze various scenarios, enabling informed decision-making. My quantitative and dashboard-building skills contribute significantly to business discussions.</p>
+												<h3>Optimization, Planning & Simulation</h3>
+												<p>Effective planning and optimization facilitate efficient resource allocation and higher profit returns. Through simulation techniques, I can model and analyze various scenarios, enabling informed decision-making. My quantitative and dashboard-building skills contribute significantly to business discussions.</p>
 											</div>
 										</article>
 									</div>
@@ -91,77 +91,77 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2 class="large-text-title">Portfolio Gallery</h2>
+										<h2>Portfolio Gallery</h2>
 									</header>
 									<div class="posts">
 										<article>
 											<a href="SC0X.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3 class="large-text-cia">SC0X:  Supply Chain Analytics </h3>
-											<p class="large-text-2">Essential analytical methods for supply chain practitioners</p>
+											<h3>SC0X:  Supply Chain Analytics </h3>
+											<p>Essential analytical methods for supply chain practitioners</p>
 											<ul class="actions">
 												<li><a href="SC0X.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="SC1X.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3 class="large-text-cia">SC1X: Supply Chain Fundamentals</h3>
-											<p class="large-text-2">Demand forecasting, inventory management, and transportation planning</p>
+											<h3>SC1X: Supply Chain Fundamentals</h3>
+											<p>Demand forecasting, inventory management, and transportation planning</p>
 											<ul class="actions">
 												<li><a href="SC1X.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="SC2X.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3 class="large-text-cia">SC2X: Supply Chain Design</h3>
-											<p class="large-text-2">Physical flow, finance, information flow, and organization/process design</p>
+											<h3>SC2X: Supply Chain Design</h3>
+											<p>Physical flow, finance, information flow, and organization/process design</p>
 											<ul class="actions">
 												<li><a href="SC2X.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="SC3X.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="large-text-cia">SC3X: Supply Chain Dynamics</h3>
-											<p class="large-text-2">Supply chain strategy, risk, dynamics, global logistics, freight, warehouse management, sustainability</p>
+											<h3>SC3X: Supply Chain Dynamics</h3>
+											<p>Supply chain strategy, risk, dynamics, global logistics, freight, warehouse management, sustainability</p>
 											<ul class="actions">
 												<li><a href="SC3X.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="SC4X.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="large-text-cia">SC4X: Supply Chain Technology and Systems</h3>
-											<p class="large-text-2">Supply chain technology, focusing on large datasets, databases, SQL, and system interactions</p>
+											<h3>SC4X: Supply Chain Technology and Systems</h3>
+											<p>Supply chain technology, focusing on large datasets, databases, SQL, and system interactions</p>
 											<ul class="actions">
 												<li><a href="SC4X.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="large-text-cia">Research: Assessing the Impact of Monopsony Power in the Publishing Industry (Ongoing)</h3>
-											<p class="large-text-2">Webscrapping, Reduced-Form Analysis, Structural Modeling & Counterfactual Simulations</p>
+											<h3>Research: Assessing the Impact of Monopsony Power in the Publishing Industry (Ongoing)</h3>
+											<p>Webscrapping, Reduced-Form Analysis, Structural Modeling & Counterfactual Simulations</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="blockchain.html" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<h3 class="large-text-cia">Research: The Development of Blockchain Technology in Supply Chain Management</h3>
-											<p class="large-text-2">Exploring the transformative impact of blockchain on supply chain transparency and efficiency</p>
+											<h3>Research: The Development of Blockchain Technology in Supply Chain Management</h3>
+											<p>Exploring the transformative impact of blockchain on supply chain transparency and efficiency</p>
 											<ul class="actions">
 												<li><a href="blockchain.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="linkedin.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="large-text-cia">Website: LinkedIn Job Posting Data Visualization</h3>
-											<p class="large-text-2">Exclusive insights from analyzing 33k+ LinkedIn job posting records</p>
+											<h3>Website: LinkedIn Job Posting Data Visualization</h3>
+											<p>Exclusive insights from analyzing 33k+ LinkedIn job posting records</p>
 											<ul class="actions">
 												<li><a href="linkedin.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="Fuyao.html" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<h3 class="large-text-cia">Case Study: Fuyao Glass America Sourcing Decision</h3>
-											<p class="large-text-2">Qualitative & quantitative analysis of the company's sourcing options</p>
+											<h3>Case Study: Fuyao Glass America Sourcing Decision</h3>
+											<p>Qualitative & quantitative analysis of the company's sourcing options</p>
 											<ul class="actions">
 												<li><a href="Fuyao.html" class="button">More</a></li>
 											</ul>
