--- a/SC2X.html
+++ b/SC2X.html
@@ -34,7 +34,7 @@
 										<h1>SC2X: Supply Chain Design</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic13.jpg" width="300" height="800" alt="" /></span>
+									<span class="image main"><img src="images/pic13.jpg" width="200" height="533" alt="" /></span>
 
 									<p class="large-text-2">This course covers all aspects involved in the design of supply chains for companies and organizations anywhere in the world. The course is divided into four main topic areas: <strong>Physical flow design, Supply chain finance, Information flow design, and Organization/Process design.</strong></p>
 									
@@ -73,13 +73,6 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -87,8 +80,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="background.html">Background and Skillset</a></li>
+										<li><a href="project_layout.html">Insight: Project Process Recipe Setting for Success</a></li>
 										<li>
 											<span class="opener">MITx MicroMasters Program in SCM</span>
 											<ul>
@@ -107,35 +100,24 @@
 											</ul>
 										</li>
 										<li><a href="linkedin.html">Website: LinkedIn Job Posting Data Visualization</a></li>
-										<li><a href="#">Case Study: Fuyao Glass America Sourcing Decision</a></li>
 									</ul>
 								</nav>
 
 							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
-
-							<!-- Section -->
+							<section>
+								<header class="major">
+									<h2  style="font-size: 2em;">Achievements</h2>
+								</header>
+								<div class="mini-posts">
+									<li style="margin-bottom: 10px;">Helped NU Robotics secure <strong>$5000+ donation (plus bonus)</strong> and place <strong>the 11th out of 526 student orgs</strong> through 2024 Giving Day Club Campaign</li>
+									<li style="margin-bottom: 10px;">Long-term member of MIT Chinese Crosstalk Comedy Club, <strong>hosted and performed regularly 3 times a year</strong> at campus Kresge Auditorium</li>
+									<li style="margin-bottom: 10px;">Won <strong>1st Place</strong> for team negotiation activity in SCHM3305 Sourcing, Procurement, and Negotiation </li>
+									<li style="margin-bottom: 10px;">Scored <strong>2nd Highest</strong> on SCHM3301 Global Supply Chain Strategy final presentation</li>
+									<li style="margin-bottom: 10px;">Won <strong>1st Place</strong> and placed on <strong>Top 1% Worldwide</strong> on Marketplace Marketing Simulation</strong></li>
+									<li style="margin-bottom: 10px;">Nominated <strong>2024 Community Husky Award Finalist</strong></li>
+								</div>
+							</section>
+						<!-- Section -->
 							<section>
 								<header class="major">
 									<h2 style="font-size: 2em;">Get in touch</h2>
@@ -143,7 +125,7 @@
 								<p class="large-text-1">Excited to know more about my projects or see how I can contribute to your company? Let's chat!</p>
 								<ul class="contact">
 									<li class="icon solid fa-envelope larger-icon">
-										<a href="https://outlook.office365.com/mail/"><strong>hou.siyu@northeastern.edu</strong></a>
+										<a href="https://outlook.office365.com/mail/" style="font-size: 13px;"><strong>hou.siyu@northeastern.edu</strong></a>
 									</li>
 									<li class="icon solid fa-phone larger-icon">
 										<strong>(206) 636-3636</strong>
