--- a/linkedin.html
+++ b/linkedin.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>LinkedIn Job Visualization</title>
+		<title>Project Process Steps</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Cindy's LinkedIn Job Visualization Website</strong></a>
+									<a href="index.html" class="logo"><strong>Cindy's Project Process Steps</strong></a>
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/cindy-siyu-hou/" class="icon brands fa-linkedin" style="font-size: 2em;"><span class="label">LinkedIn</span></a></li>
 									</ul>
@@ -34,7 +34,7 @@
 										<h1>LinkedIn: A Glimpse Into The Job Market</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic19.jpg" width="300" height="800" alt="" /></span>
+									<span class="image main"><img src="images/pic19.jpg" width="200" height="533" alt="" /></span>
 
 									<p class="large-text-2">LinkedIn as a pivotal platform where companies and individuals seeking connections and job opportunities.
 									Many of college students have faced certain difficulties with being hired and in career progression. My teammates and I felt that exploring data on LinkedIn could help to provide insight not only to the topic as a whole, but on a professional level as well. Analyzing this data will give us an idea of <strong>what the job market really looks like and how one might be able to navigate it more effectively</strong>. For our team project, we utilized <strong>Google Drive and GitHub</strong> as our collaboration platforms. The website was developed from the ground up. The final product incorporates<strong> HTML, CSS, JavaScript, and Python</strong>.</p>
@@ -72,12 +72,6 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
 
 							<!-- Menu -->
 								<nav id="menu">
@@ -86,8 +80,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="background.html">Background and Skillset</a></li>
+										<li><a href="project_layout.html">Insight: Project Process Recipe Setting for Success</a></li>
 										<li>
 											<span class="opener">MITx MicroMasters Program in SCM</span>
 											<ul>
@@ -105,36 +99,25 @@
 												<li><a href="blockchain.html">The Development of Blockchain Technology in SCM</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Website: LinkedIn Job Posting Data Visualization</a></li>
-										<li><a href="#">Case Study: Fuyao Glass America Sourcing Decision</a></li>
+										<li><a href="linkedin.html">Website: LinkedIn Job Posting Data Visualization</a></li>
 									</ul>
 								</nav>
 
 							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
-
-							<!-- Section -->
+							<section>
+								<header class="major">
+									<h2  style="font-size: 2em;">Achievements</h2>
+								</header>
+								<div class="mini-posts">
+									<li style="margin-bottom: 10px;">Helped NU Robotics secure <strong>$5000+ donation (plus bonus)</strong> and place <strong>the 11th out of 526 student orgs</strong> through 2024 Giving Day Club Campaign</li>
+									<li style="margin-bottom: 10px;">Long-term member of MIT Chinese Crosstalk Comedy Club, <strong>hosted and performed regularly 3 times a year</strong> at campus Kresge Auditorium</li>
+									<li style="margin-bottom: 10px;">Won <strong>1st Place</strong> for team negotiation activity in SCHM3305 Sourcing, Procurement, and Negotiation </li>
+									<li style="margin-bottom: 10px;">Scored <strong>2nd Highest</strong> on SCHM3301 Global Supply Chain Strategy final presentation</li>
+									<li style="margin-bottom: 10px;">Won <strong>1st Place</strong> and placed on <strong>Top 1% Worldwide</strong> on Marketplace Marketing Simulation</strong></li>
+									<li style="margin-bottom: 10px;">Nominated <strong>2024 Community Husky Award Finalist</strong></li>
+								</div>
+							</section>
+						<!-- Section -->
 							<section>
 								<header class="major">
 									<h2 style="font-size: 2em;">Get in touch</h2>
@@ -142,7 +125,7 @@
 								<p class="large-text-1">Excited to know more about my projects or see how I can contribute to your company? Let's chat!</p>
 								<ul class="contact">
 									<li class="icon solid fa-envelope larger-icon">
-										<a href="https://outlook.office365.com/mail/"><strong>hou.siyu@northeastern.edu</strong></a>
+										<a href="https://outlook.office365.com/mail/" style="font-size: 13px;"><strong>hou.siyu@northeastern.edu</strong></a>
 									</li>
 									<li class="icon solid fa-phone larger-icon">
 										<strong>(206) 636-3636</strong>
