--- a/blockchain.html
+++ b/blockchain.html
@@ -43,7 +43,7 @@
 									<h2>Literature review</h2>
 									<p class="large-text-2">My project journey begins with a comprehensive literature review. This review aims to provide a snapshot of the current state of research in the field of blockchain technology as it applies to supply chain management. </p>
 
-									<iframe src="pdfs/Blockchain Lit Review.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
+									<iframe src="pdfs/Blockchain%20Lit%20Review.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
 
 								
 									<hr class="major" />
