--- a/blockchain.html
+++ b/blockchain.html
@@ -43,7 +43,7 @@
 									<h2>Literature review</h2>
 									<p class="large-text-2">My project journey begins with a comprehensive literature review. This review aims to provide a snapshot of the current state of research in the field of blockchain technology as it applies to supply chain management. </p>
 
-									<iframe src="Blockchain Lit Review.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
+									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Lit Review.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
 
 								
 									<hr class="major" />
@@ -51,7 +51,7 @@
 									<h2>White paper</h2>
 									<p class="large-text-2">Building upon the insights gained from the literature review, I developed a white paper that delves deeper into the practical applications and implications of blockchain technology in supply chains. </p>
 
-									<iframe src="Blockchain White Paper.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
+									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain White Paper.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
 									
 									<hr class="major" />
 
@@ -71,7 +71,7 @@
 									<h2>Professional presentation</h2>
 									<p class="large-text-2">In addition to these written components, I presented my findings in an in-person presentation. The experience of presenting my work to a large setting helped refine my understanding and communicate the significance of blockchain technology in supply chain management effectively. </p>
 
-									<iframe src="Blockchain Presentation.pdf" style="width: 100%; height: 70vh; border: none;"></iframe>
+									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Presentation.pdf" style="width: 100%; height: 70vh; border: none;"></iframe>
 								</section>
 
 						</div>
