--- a/linkedin.html
+++ b/linkedin.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Project Process Steps</title>
+		<title>LinkedIn Job Analysis Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Cindy's Project Process Steps</strong></a>
+									<a href="index.html" class="logo"><strong>Cindy's LinkedIn Job Analysis</strong></a>
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/cindy-siyu-hou/" class="icon brands fa-linkedin" style="font-size: 2em;"><span class="label">LinkedIn</span></a></li>
 									</ul>
