--- a/background.html
+++ b/background.html
@@ -126,6 +126,14 @@
 											<h3>Project Management Simplified</h3>
 									</article>
 									<article>
+										<a href="https://www.linkedin.com/learning/certificates/f21e86f4ae4d9d06fab3cf89f5969de864bbc00607d55fdc42fb72ad8e29f9c4?trk=share_certificate" class="image"><img src="images/pic31.jpg" alt="" class="uniform-height" /></a>
+										<h3>Six Sigma: Black Belt</h3>
+								</article>
+								<article>
+									<a href="https://www.linkedin.com/learning/certificates/f6a235b7c799722c0738c65e3b3a272514ca5432ccf4db75fd9c102ba0a60e18?trk=share_certificate" class="image"><img src="images/pic30.jpg" alt="" class="uniform-height" /></a>
+									<h3>Six Sigma Foundations</h3>
+							</article>
+									<article>
 											<a href="https://www.linkedin.com/learning/certificates/cc6563a7dadc7eb0359b554816c7c26af822e5dd0f2d658014fa40d730e4f79d?trk=share_certificate" class="image"><img src="images/pic26.jpg" alt="" class="uniform-height" /></a>
 											<h3>Preparing to Get a Job in Data Analytics</h3>
 									</article>
@@ -137,6 +145,7 @@
 										<a href="https://www.linkedin.com/learning/certificates/76ad69bc276b408208f1be7dca46be0e994fca551a03d9c4de4eb886b42ed413?trk=share_certificate" class="image"><img src="images/pic28.jpg" alt="" class="uniform-height" /></a>
 										<h3>Solving Business Problems</h3>
 								</article>
+
 									</div>
 
 								</section>
