--- a/background.html
+++ b/background.html
@@ -102,7 +102,7 @@
 									<h2>Certification</h2>
 									<div class="posts">
 										<article>
-											<a href="SC0X.html" class="image"><img src="images/pic01.jpg" alt="" class="uniform-height" /></a>
+											<a href="SC0X.html" class="image"><img src="images/pic32.jpg" alt="" class="uniform-height" /></a>
 											<h3>SC0X:  Supply Chain Analytics </h3>
 									</article>
 									<article>
@@ -110,7 +110,7 @@
 											<h3>SC1X: Supply Chain Fundamentals</h3>
 									</article>
 									<article>
-											<a href="SC2X.html" class="image"><img src="images/pic03.jpg" alt="" class="uniform-height" /></a>
+											<a href="SC2X.html" class="image"><img src="images/pic32.jpg" alt="" class="uniform-height" /></a>
 											<h3>SC2X: Supply Chain Design</h3>
 									</article>
 									<article>
@@ -118,20 +118,20 @@
 											<h3>SC3X: Supply Chain Dynamics</h3>
 									</article>
 									<article>
-											<a href="SC4X.html" class="image"><img src="images/pic05.jpg" alt="" class="uniform-height" /></a>
+											<a href="SC4X.html" class="image"><img src="images/pic32.jpg" alt="" class="uniform-height" /></a>
 											<h3>SC4X: Supply Chain Technology and Systems</h3>
 									</article>
 									<article>
-											<a href="https://www.linkedin.com/learning/certificates/5de42c2c57eb94577ef68510de9aaad8c3519e3d6fb420c8acfa371555cbc0d7?trk=share_certificate" class="image"><img src="images/pic25.jpg" alt="" class="uniform-height" /></a>
-											<h3>Project Management Simplified</h3>
+											<a href="https://www.linkedin.com/learning/certificates/177353f32aa27df37b4eaab8ce88e06709e0a3ec896038252cdd49caeb0a140e?trk=share_certificate" class="image"><img src="images/pic25.jpg" alt="" class="uniform-height" /></a>
+											<h3>Project Management Simplified (PMI registered program)</h3>
 									</article>
 									<article>
-										<a href="https://www.linkedin.com/learning/certificates/f21e86f4ae4d9d06fab3cf89f5969de864bbc00607d55fdc42fb72ad8e29f9c4?trk=share_certificate" class="image"><img src="images/pic31.jpg" alt="" class="uniform-height" /></a>
-										<h3>Six Sigma: Black Belt</h3>
+										<a href="https://www.linkedin.com/learning/certificates/61e9bd72bdc718993e3d7cfebdafddc01236f990ee344a3ef2fa1e2ed6bc5845?trk=share_certificate" class="image"><img src="images/pic31.jpg" alt="" class="uniform-height" /></a>
+										<h3>Six Sigma: Black Belt (PMI registered program)</h3>
 								</article>
 								<article>
-									<a href="https://www.linkedin.com/learning/certificates/f6a235b7c799722c0738c65e3b3a272514ca5432ccf4db75fd9c102ba0a60e18?trk=share_certificate" class="image"><img src="images/pic30.jpg" alt="" class="uniform-height" /></a>
-									<h3>Six Sigma Foundations</h3>
+									<a href="https://www.linkedin.com/learning/certificates/068616f7e4bf6c8d6bc3b28a590c7b57eb56a49c0970917cd80fca5feec7d390?trk=share_certificate" class="image"><img src="images/pic30.jpg" alt="" class="uniform-height" /></a>
+									<h3>Six Sigma Foundations (PMI registered program)</h3>
 							</article>
 									<article>
 											<a href="https://www.linkedin.com/learning/certificates/cc6563a7dadc7eb0359b554816c7c26af822e5dd0f2d658014fa40d730e4f79d?trk=share_certificate" class="image"><img src="images/pic26.jpg" alt="" class="uniform-height" /></a>
@@ -142,8 +142,8 @@
 											<h3>Data Analytics: Dashboards vs. Data Stories</h3>
 									</article>
 									<article>
-										<a href="https://www.linkedin.com/learning/certificates/76ad69bc276b408208f1be7dca46be0e994fca551a03d9c4de4eb886b42ed413?trk=share_certificate" class="image"><img src="images/pic28.jpg" alt="" class="uniform-height" /></a>
-										<h3>Solving Business Problems</h3>
+										<a href="https://www.linkedin.com/learning/certificates/ae68fa5b5d3f3ab3d18e1658fc98148d839460333da1cf223687c084bee24566?trk=share_certificate" class="image"><img src="images/pic28.jpg" alt="" class="uniform-height" /></a>
+										<h3>Solving Business Problems (NASBA registered program)</h3>
 								</article>
 
 									</div>
@@ -180,7 +180,7 @@
 										<li>
 											<span class="opener">Research</span>
 											<ul>
-												<li><a href="#">Assessing the Impact of Monopsony Power in the Publishing Industry</a></li>
+												<li><a href="monopsony.html">Assessing the Impact of Monopsony Power in the Publishing Industry</a></li>
 												<li><a href="blockchain.html">The Development of Blockchain Technology in SCM</a></li>
 											</ul>
 										</li>
