--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 											</ul>
 									</article>
 									<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" class="uniform-height" /></a>
+											<a href="monopsony.html" class="image"><img src="images/pic07.jpg" alt="" class="uniform-height" /></a>
 											<h3>Research: Assessing the Impact of Monopsony Power in the Publishing Industry (Ongoing)</h3>
-											<p>Webscrapping, Reduced-Form Analysis, Structural Modeling & Counterfactual Simulations</p>
+											<p>Econometric research on DOJ blocked publishing industry merger case, utilizes reduced-form analysis and counterfactual simulation</p>
 											<ul class="actions">
-													<li><a href="#" class="button">More</a></li>
+													<li><a href="monopsony.html" class="button">More</a></li>
 											</ul>
 									</article>
 									<article>
@@ -200,7 +200,7 @@
 										<li>
 											<span class="opener">Research</span>
 											<ul>
-												<li><a href="#">Assessing the Impact of Monopsony Power in the Publishing Industry</a></li>
+												<li><a href="monopsony.html">Assessing the Impact of Monopsony Power in the Publishing Industry (Ongoing)</a></li>
 												<li><a href="blockchain.html">The Development of Blockchain Technology in SCM</a></li>
 											</ul>
 										</li>
