--- a/monopsony.html
+++ b/monopsony.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Blockchain in SCM</title>
+		<title>Monopsony in Publishing Industry</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Cindy's Blockchain in SCM Research</strong></a>
+									<a href="index.html" class="logo"><strong>Cindy's Monopsony Research</strong></a>
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/cindy-siyu-hou/" class="icon brands fa-linkedin" style="font-size: 2em;"><span class="label">LinkedIn</span></a></li>
 									</ul>
@@ -31,47 +31,39 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>The Development of Blockchain Technology in Supply Chain Management</h1>
+										<h1>Assessing the Impact of Monopsony Power in the Publishing Industry</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic16.jpg" width="200" height="533" alt="" /></span>
+									<span class="image main">
+										<img src="images/pic33.jpg" style="width: 100; height: auto;" alt="" />
+									</span>
 
-									<p class="large-text-2">The focus of my project, "The Development of Blockchain Technology in Supply Chain Management," is to investigate <strong>how blockchain technology can transform supply chain processes.</strong> Blockchain, known for its decentralized and immutable nature, has the potential to address many challenges faced by the supply chain industry, including transparency, traceability, and security. By providing a single source of truth, blockchain can enhance trust among stakeholders, reduce fraud, and streamline operations.</p>
+									<p class="large-text-2">The Northeastern University Data Initiative and University of Toronto Rotman Business School Collaborative Research aims to <strong>investigate the role of monopsony power in the publishing industry, particularly examining how mergers between major publishers, such as Penguin Random House (PRH) and Simon & Schuster (SS), impact various market agents</strong>. The study will address concerns about market power gained over book authors and its implications on the industry. Understanding these dynamics is crucial not only for regulatory bodies and policymakers but also for authors, publishers, and consumers. The findings will contribute to the broader discourse on the economic impacts of mergers and provide insights into maintaining a competitive and fair market environment. 
+									</p>
 
 									<hr class="major" />
 
-									<h2>Literature review</h2>
-									<p class="large-text-2">My project journey begins with a comprehensive literature review. This review aims to provide a snapshot of the current state of research in the field of blockchain technology as it applies to supply chain management. </p>
+									<h2>Web Scraping</h2>
 
-									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Lit Review.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
+									<p class="large-text-2">I used Python web scraping libraries, such as Beautiful Soup and Request, to extract 18k+ sales records from 2010-2024 Amazon historical website archives. With the provision of only one prompt and data attribute definitions, I designed the workflow, dataset layout, and coding programs for the entire data extraction process. By leveraging Python libraries pandas, glob, and os,  I managed large-scale data cleaning and transformation through various Excel files in seconds. Below are some web scraping Python code and final dataset exhibit.</p>
 
-								
-									<hr class="major" />
-
-									<h2>White paper</h2>
-									<p class="large-text-2">Building upon the insights gained from the literature review, I developed a white paper that delves deeper into the practical applications and implications of blockchain technology in supply chains. </p>
-
-									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain White Paper.pdf" style="width: 100%; height: 80vh; border: none;"></iframe>
-									
-									<hr class="major" />
-
-									<h2>Public document</h2>
-									<p class="large-text-2">The third component of my project is to translate academic knowledge into a format accessible to the general public. This public document aims to demystify blockchain technology and its impact on supply chain management for a broader audience. </p>
-
-									<div class="gallery">
-										<button class="arrow left-arrow">&#10094;</button>
-										<div class="gallery-item">
-											<img id="gallery-image" src="images/pic17.jpg" alt="Image 1">
+									<div style="display: flex; justify-content: space-between;">
+										<span class="image main" style="flex: 1; margin-right: 10px;">
+												<img src="images/pic35.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+										</span>
+										<div style="display: flex; flex-direction: column; flex: 1; margin-left: 10px;">
+												<span class="image main" style="margin-bottom: 10px;">
+														<img src="images/pic36.jpg" style="width: 100%; height: auto;" alt="" />
+												</span>
+												<span class="image main">
+														<img src="images/pic34.jpg" style="width: 100%; height: auto;" alt="" />
+												</span>
 										</div>
-										<button class="arrow right-arrow">&#10095;</button>
-									</div>
-
+								</div>
 									<hr class="major" />
 
-									<h2>Professional presentation</h2>
-									<p class="large-text-2">In addition to these written components, I presented my findings in an in-person presentation. The experience of presenting my work to a large setting helped refine my understanding and communicate the significance of blockchain technology in supply chain management effectively. </p>
+									<h2>In progress</h2>
 
-									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Presentation.pdf" style="width: 100%; height: 70vh; border: none;"></iframe>
 								</section>
 
 						</div>
