--- a/linkedin.html
+++ b/linkedin.html
@@ -95,7 +95,7 @@
 										<li>
 											<span class="opener">Research</span>
 											<ul>
-												<li><a href="#">Assessing the Impact of Monopsony Power in the Publishing Industry</a></li>
+												<li><a href="monopsony.html">Assessing the Impact of Monopsony Power in the Publishing Industry</a></li>
 												<li><a href="blockchain.html">The Development of Blockchain Technology in SCM</a></li>
 											</ul>
 										</li>
