--- a/background.html
+++ b/background.html
@@ -133,6 +133,10 @@
 									<a href="https://www.linkedin.com/learning/certificates/068616f7e4bf6c8d6bc3b28a590c7b57eb56a49c0970917cd80fca5feec7d390?trk=share_certificate" class="image"><img src="images/pic30.jpg" alt="" class="uniform-height" /></a>
 									<h3>Six Sigma Foundations (PMI registered program)</h3>
 							</article>
+							<article>
+								<a href="https://www.linkedin.com/learning/certificates/23a7985000381ce1ba5c2695346fefc388b34a0baed1d0454580e2fdbe495038?trk=share_certificate" class="image"><img src="images/pic37.jpg" alt="" class="uniform-height" /></a>
+								<h3>Introduction to Prompt Engineering for Generative AI</h3>
+						</article>
 									<article>
 											<a href="https://www.linkedin.com/learning/certificates/cc6563a7dadc7eb0359b554816c7c26af822e5dd0f2d658014fa40d730e4f79d?trk=share_certificate" class="image"><img src="images/pic26.jpg" alt="" class="uniform-height" /></a>
 											<h3>Preparing to Get a Job in Data Analytics</h3>
