--- a/project_layout.html
+++ b/project_layout.html
@@ -36,7 +36,7 @@
 					<span class="image main"><img src="images/pic29.jpg" width="200" height="533" alt="" /></span>
 
 
-					<p class="large-text-2">Working efficiently on meaningful projects is my guiding principle. <strong>I find true fulfillment when my efforts generate real value for the organizations, clients, and society I serve</strong>. To consistently deliver high-quality results on time, I have developed my own methodology for enhancing project efficiency.
+					<p class="large-text-2">Working efficiently on meaningful projects is my guiding principle. <strong>I find true fulfillment when my efforts generate real value for the organizations, clients I serve</strong>. To consistently deliver high-quality results on time, I have developed my own methodology for enhancing project efficiency.
 						 </p>
 
 
@@ -57,7 +57,7 @@
 
 					<hr class="major" />
 					<h2>✅ 3. Unsure about correct direction, bring my thoughts</h2>
-					<p class="large-text-2">When encountering problems at work, don't just ask the leader what to do; instead, come up with at least two solutions.</p>
+					<p class="large-text-2">When I encounter problems at work, I don't just ask the leader what to do; Instead, I come up with at least two possible solutions to discuss with the leader.</p>
 
 					<hr class="major" />
 					<h2>✅ 4. Use the RIDE model to analyze possible solutions</h2>
@@ -79,7 +79,7 @@
 					<p class="large-text-2">Share work, explain the process. When the leader asks me to share my experience with the team, I make sure to conduct a multi-dimensional analysis instead of speaking vaguely.</p>
 
 					<hr class="major" />
-					<h2>✅ 6. Use Business universal analysis to depict a full picture</h2>
+					<h2>✅ 6. Use business universal analysis to depict a full picture</h2>
 					<ul class="large-text-2">
 							<li><strong>What:</strong> Product background</li>
 							<li><strong>Who:</strong> Target audience</li>
@@ -98,7 +98,7 @@
 							<li><strong>A - Analysis:</strong> Analyze the reasons for success/failure, both surface/deep reasons, contingencies, and inevitabilities.</li>
 							<li><strong>I - Insight:</strong> Summarize the methodology.</li>
 					</ul>
-					<p class="large-text-2">Never repeat at a low level. I apply SOP and validate my methodologies to improve my ability to think more critically.</p>
+					<p class="large-text-2">Never repeat at a low level. I apply SOP and validate my methodologies to improve my ability to think more critically for future projects.</p>
 			</section>
 
 						</div>
