--- a/SC1X.html
+++ b/SC1X.html
@@ -47,6 +47,16 @@
 									<p class="large-text-2">2. Exponential Smoothing with Seasonality.</p>
 									<p class="large-text-2">3. Forecasting for Special Cases.</p>
 
+									<div style="display: flex; justify-content: space-between; align-items: stretch;">
+
+										<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 90px;">
+											<img src="images/pic42.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+									</span>
+									<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 90px;">
+										<img src="images/pic43.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+								</span>
+								</div>
+
 									<hr class="major" />
 
 									<h2>Inventory</h2>
@@ -54,14 +64,28 @@
 									<p class="large-text-2">2. Stochastic Demand and Single Period Inventory Model.</p>
 									<p class="large-text-2">3. Continuous Vs. Periodic Review Policies.</p>
 									<p class="large-text-2">4. Warehouse Fundamentals.</p>
+									 <!-- New image added here -->
+									 <div style="display: flex; justify-content: space-between; align-items: stretch;">
 
+										<div style="display: flex; flex-direction: column; flex: 1; margin-left: 10px;">
+											<span class="image main" style="flex: 1;">
+												<img src="images/pic40.jpg" style="width: 100%; height: auto;" alt="" />
+										</span>
+												<span class="image main" style="margin-bottom: 10px; flex: 1;">
+														<img src="images/pic39.jpg" style="width: 100%; height: auto;" alt="" />
+												</span>
+										</div>
+										<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 90px;">
+											<img src="images/pic38.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+									</span>
+								</div>
 									<hr class="major" />
 
 									<h2>Transportation</h2>
 									<p class="large-text-2">1. Fundamentals of Freight Transportation.</p>
 									<p class="large-text-2">2. Lead Time Variability & Mode Selection.</p>
 									<p class="large-text-2">3. Freight Transportation Analysis.</p>
-
+									<span class="image main"><img src="images/pic41.jpg" alt="" /></span>
 								</section>
 
 						</div>
