--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" style="width: 500px; height: auto; margin-top: 0px; margin-left: 30px;" />
-									</span>
+										<img src="images/pic10.jpg" alt="" class="responsive-image" />
+								</span>
 								</section>
 
 							<!-- Section -->
