--- a/blockchain.html
+++ b/blockchain.html
@@ -43,7 +43,9 @@
 									<h2>Literature review</h2>
 									<p class="large-text-2">My project journey begins with a comprehensive literature review. This review aims to provide a snapshot of the current state of research in the field of blockchain technology as it applies to supply chain management. </p>
 
-									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Lit Review.pdf" class="responsive-iframe"></iframe>
+									<div class="iframe-container">
+										<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Lit Review.pdf" class="responsive-iframe"></iframe>
+								</div>
 
 								
 									<hr class="major" />
