--- a/linkedin.html
+++ b/linkedin.html
@@ -44,7 +44,7 @@
 									<hr class="major" />
 
 									<h2>Final website delivery</h2>
-
+									<p class="large-text-2">Mobile viewers can access the website through <strong><a href="https://cindysh10012.github.io/LinkedinWebsiteGallery.github.io/" target="_blank">HERE</a></strong>.</p>
 									<div class="iframe-container">
 										<iframe src="https://cindysh10012.github.io/LinkedinWebsiteGallery.github.io/"></iframe>
 								</div>
