--- a/SC0X.html
+++ b/SC0X.html
@@ -54,7 +54,7 @@
 									<p class="large-text-2">3. Identify how to test a hypothesis.</p>
 									<p class="large-text-2">4. Review and apply the steps in the practice of regression.</p>
 									<p class="large-text-2">5. Be able to analyze regression models and recognize potential issues.</p>
-
+									<span class="image main"><img src="images/pic46.jpg" alt="" /></span>
 									<hr class="major" />
 
 									<h2>Optimization</h2>
@@ -75,6 +75,7 @@
 									<p class="large-text-2">4. Learn the appropriate steps to make quick estimations.</p>
 									<p class="large-text-2">5. Review the steps to develop a simulation model.</p>
 									<p class="large-text-2">6. Understand when to use a simulation, and when not to use it.</p>
+									<span class="image main"><img src="images/pic47.jpg" alt="" /></span>
 								</section>
 
 						</div>
