--- a/SC3X.html
+++ b/SC3X.html
@@ -44,14 +44,29 @@
 									<p class="large-text-2">1. Systems & Complexity.</p>
 									<p class="large-text-2">2. Customer Collaboration and Bullwhip Effect.</p>
 									<p class="large-text-2">3. System Dynamics Concepts & Modeling.</p>
+									<div style="display: flex; justify-content: space-between; align-items: stretch;">
 
+										<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 90px;">
+											<img src="images/pic48.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+									</span>
+									<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 180px;">
+										<img src="images/pic49.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+								</span>
+								</div>
 									<hr class="major" />
 
 									<h2>Supply Chain Strategy & Process Analysis</h2>
 									<p class="large-text-2">1. Strategy Frameworks .</p>
 									<p class="large-text-2">2. Process Analysis.</p>
-									<p class="large-text-2">3. Market Reboot Case Study.</p>
-
+									
+									<div style="display: flex; justify-content: space-between; align-items: stretch;">
+									<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 50px;">
+										<img src="images/pic50.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+								</span>
+								<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 100px;">
+									<img src="images/pic51.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+							</span>
+							</div>
 									<hr class="major" />
 
 									<h2>Global Supply Chain Management</h2>
@@ -60,9 +75,28 @@
 									<p class="large-text-2">3. Current Issues & Financing.</p>
 									<p class="large-text-2">4. Sourcing & Shoring.</p>
 
+
+									<div style="display: flex; justify-content: space-between; align-items: stretch;">
+										<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 0px;">
+											<img src="images/pic52.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+									</span>
+									<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 0px;">
+										<img src="images/pic53.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+								</span>
+								</div>
 									<hr class="major" />
 
 									<h2>Risk Management, Resilience & Exogenous Factors</h2>
+									<p class="large-text-2">1. Disruption & Risk.</p>
+									<p class="large-text-2">2. Regulations & Impacts.</p>
+									<div style="display: flex; justify-content: space-between; align-items: stretch;">
+										<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 0px;">
+											<img src="images/pic54.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+									</span>
+									<span class="image main" style="flex: 1; margin-right: 10px; margin-top: 40px;">
+										<img src="images/pic55.jpg" style="width: 100%; height: auto;" alt="Description of pic35" />
+								</span>
+								</div>
 								</section>
 
 						</div>
