--- a/background.html
+++ b/background.html
@@ -93,7 +93,7 @@
 									<h2>Skillset</h2>
 
 									<p class="large-text-2"><strong>Programming Languages:</strong> Python | SQL | Power Query M formula | Java | C++ | HTML | CSS | Javascript | Racket</p>
-									<p class="large-text-2"><strong>Applications:</strong> Excel | PowerPoint | PowerBI | Tableau | Visual Studio Code | Flourish | Datawrapper | FourKites | Snowflake | PyCharm | GoogleColab | Github | Minitab</p>
+									<p class="large-text-2"><strong>Applications:</strong> Excel | PowerPoint | PowerBI | Tableau | Visual Studio Code | Flourish | Datawrapper | FourKites | Snowflake | PyCharm | GoogleColab | Github | Canva | Minitab</p>
 									<p class="large-text-2"><strong>Python Libraries:</strong> Pandas | NumPy | Matplotlib | Seaborn | Pulp | Scikit-learn | BeautifulSoup | Geopandas | OpenPyXL | Glob | Os</p>
 
 								
