--- a/SC2X.html
+++ b/SC2X.html
@@ -44,21 +44,30 @@
 
 									<h2>Pysical Network Design</h2>
 									<p class="large-text-2">1. The Transportation Problem & Transhipment Problem.</p>
-									<p class="large-text-2">2. Case Study: New England Root Beer Distributors (NERD4).</p>
-									<p class="large-text-2">3. Advanced Topics in Supply Chain Network Design.</p>
+									<p class="large-text-2">2. Advanced Topics in Supply Chain Network Design.</p>
 
+									<div style="display: flex; flex-direction: row; flex: 1; margin-left: 10px;">
+										<span class="image main" style="flex: 1; margin-right: 10px;">
+												<img src="images/pic57.jpg" style="width: 100%; height: auto;" alt="" />
+										</span>
+										<span class="image main" style="flex: 1;">
+												<img src="images/pic58.jpg" style="width: 100%; height: auto;" alt="" />
+										</span>
+								</div>
 									<hr class="major" />
 
 									<h2>Production Planning</h2>
 									<p class="large-text-2">1. Production	Planning and Fixed Planning Horizons.</p>
 									<p class="large-text-2">2. Material	and	Distribution Requirements Planning.</p>
 
+									<img src="images/pic59.jpg" style="width: 100%; height: auto;" alt="" />
+
 									<hr class="major" />
 
 									<h2>S&OP and Distribution Strategies</h2>
 									<p class="large-text-2">1. Aggregate Planning and Sales & Operations Planning.</p>
 									<p class="large-text-2">2. Distribution Channel Strategies.</p>
-
+									<img src="images/pic60.jpg" style="width: 100%; height: auto;" alt="" />
 									<hr class="major" />
 
 									<h2>Supplier Management</h2>
