--- a/SC4X.html
+++ b/SC4X.html
@@ -52,6 +52,12 @@
 									<p class="large-text-2">1. Machine Learning Algorithms.</p>
 									<p class="large-text-2">2. Advanced Machine Learning.</p>
 
+									<hr class="major" />
+
+									<h2>Supply Chain Systems (ERPs & SC Modules)</h2>
+									<p class="large-text-2">1. Enterprise	Resource Planning & SC Module.</p>
+									<p class="large-text-2">2. Software	Selection	&	Implementation.</p>
+									<img src="images/pic56.jpg" style="width: 100%; height: auto;" alt="" />
 								</section>
 
 						</div>
