--- a/background.html
+++ b/background.html
@@ -130,6 +130,10 @@
 										<h3>Six Sigma: Black Belt (PMI registered program)</h3>
 								</article>
 								<article>
+									<a href="https://www.linkedin.com/learning/certificates/196812d1878a75f0267669137f2e54d764b2711672f92109f622b847457e88a6?trk=share_certificate" class="image"><img src="images/pic61.jpg" alt="" class="uniform-height" /></a>
+									<h3>Six Sigma: Green Belt (PMI registered program)</h3>
+							</article>
+								<article>
 									<a href="https://www.linkedin.com/learning/certificates/068616f7e4bf6c8d6bc3b28a590c7b57eb56a49c0970917cd80fca5feec7d390?trk=share_certificate" class="image"><img src="images/pic30.jpg" alt="" class="uniform-height" /></a>
 									<h3>Six Sigma Foundations (PMI registered program)</h3>
 							</article>
