--- a/SC2X.html
+++ b/SC2X.html
@@ -73,6 +73,7 @@
 									<h2>Supplier Management</h2>
 									<p class="large-text-2">1. Procurement Strategy.</p>
 									<p class="large-text-2">2. Optimization Based Procurement.</p>
+									<img src="images/pic62.jpg" style="width: 100%; height: auto;" alt="" />
 								</section>
 
 						</div>
