--- a/SC0X.html
+++ b/SC0X.html
@@ -45,7 +45,7 @@
 									<p class="large-text-2">2. Differentiate between continuous and discrete random variable distributions.</p>
 									<p class="large-text-2">3. Review major distributions: Uniform, Poisson, Normal, and Triangle.</p>
 									<p class="large-text-2">4. Recognize and apply probability mass functions (pmf), probability density functions (pdf), and cumulative density functions (cdf).</p>
-									<span class="image main"><img src="images/pic44.jpg" alt="" /></span>
+									<span class="image main"><img src="images/pic44.jpg" style="width: 60%; height: auto;" alt="" /></span>
 									<hr class="major" />
 
 									<h2>Statistics</h2>
@@ -54,7 +54,7 @@
 									<p class="large-text-2">3. Identify how to test a hypothesis.</p>
 									<p class="large-text-2">4. Review and apply the steps in the practice of regression.</p>
 									<p class="large-text-2">5. Be able to analyze regression models and recognize potential issues.</p>
-									<span class="image main"><img src="images/pic46.jpg" alt="" /></span>
+									<span class="image main"><img src="images/pic46.jpg" style="width: 60%; height: auto;" alt="" /></span>
 									<hr class="major" />
 
 									<h2>Optimization</h2>
@@ -65,7 +65,7 @@
 									<p class="large-text-2">5. Be able to analyze regression models and recognize potential issues.</p>
 									<p class="large-text-2">4. Review and apply the steps in the practice of regression.</p>
 									<p class="large-text-2">5. Be able to analyze regression models and recognize potential issues.</p>
-									<span class="image main"><img src="images/pic45.jpg" alt="" /></span>
+									<span class="image main"><img src="images/pic45.jpg" style="width: 60%; height: auto;" alt="" /></span>
 									<hr class="major" />
 
 									<h2>Algorithms, Approximations and Simulation</h2>
@@ -75,7 +75,7 @@
 									<p class="large-text-2">4. Learn the appropriate steps to make quick estimations.</p>
 									<p class="large-text-2">5. Review the steps to develop a simulation model.</p>
 									<p class="large-text-2">6. Understand when to use a simulation, and when not to use it.</p>
-									<span class="image main"><img src="images/pic47.jpg" alt="" /></span>
+									<span class="image main"><img src="images/pic47.jpg" style="width: 60%; height: auto;" alt="" /></span>
 								</section>
 
 						</div>
