--- a/SC1X.html
+++ b/SC1X.html
@@ -85,7 +85,7 @@
 									<p class="large-text-2">1. Fundamentals of Freight Transportation.</p>
 									<p class="large-text-2">2. Lead Time Variability & Mode Selection.</p>
 									<p class="large-text-2">3. Freight Transportation Analysis.</p>
-									<span class="image main"><img src="images/pic41.jpg" alt="" /></span>
+									<span class="image main"><img src="images/pic41.jpg" style="width: 60%; height: auto;" alt="" /></span>
 								</section>
 
 						</div>
